--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
 		"plugins:server": "shx cp .env ./node_modules/stelace-server/.env && cross-env STELACE_PLUGINS_PATHS=$(shx pwd) npm explore stelace-server -- yarn plugins"
 	},
 	"dependencies": {
+		"axios": "^1.2.2",
 		"debug": "^4.1.1",
 		"lodash": "4.17.19",
-		"stelace-util-keys": "https://github.com/stelace/stelace-util-keys.git#3.0.1",
-		"shippypro": "^8.14.0"
+		"stelace-util-keys": "https://github.com/stelace/stelace-util-keys.git#3.0.1"
 	},
 	"devDependencies": {
 		"ava": "^3.0.0",
