fix: correct package.json name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "stelace-mangopay",
+	"name": "stelace-shippypro",
 	"version": "0.1.0",
 	"description": "Stelace server wrapper plugin for Stripe",
 	"license": "GPL-3.0",
